# LichtFeld-Studio-gs

./: .clang-format  .gitignore  CMakeLists.txt  THIRD_PARTY_LICENSES.md  build_lichtfeld.ps1  vcpkg.json
.github/workflows/: nightly.yml  ubuntu.yml  windows.yml
cmake/: CompileShaders.cmake  FetchLibvterm.cmake  FetchUV.cmake  config.h.in
docs/: Python_API_issues.md  building_and_distribution.md  imgui_inventory.md  plugin-system.md
docs/development/: vulkan-elite-roadmap.md  vulkan-rendering-pipeline.md  vulkan-viewer-migration.md
docs/plugins/: api-reference.md  getting-started.md
scripts/: compile_rmlui_shaders.py  lichtfeld_mcp_bridge.py
src/app/: application.cpp  converter.cpp  main.cpp  mcp_gui_tools.cpp  mcp_runtime_tools.cpp  mcp_sequencer_tools.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  image_io.cpp  parameters.cpp  scene.cpp
src/io/: CMakeLists.txt  (+1 more)
src/mcp/: CMakeLists.txt  mcp_training_context.cpp  mcp_training_context.hpp  selection_client.cpp  selection_client.hpp  shared_scene_tools.cpp
tests/: CMakeLists.txt  benchmark_selection_modes.cpp  test_argument_parser.cpp  test_colmap_image_layout.cpp  test_fastgs_fuzz.cpp  test_fastgs_kernels.cpp  test_fused_l1_ssim.cpp  test_image_kernels.cpp  test_input_controller_focus.cpp  test_mcp_shared_scene_tools.cpp  test_mesh_data.cpp  test_nurec_usdz_format.cpp  test_parameter_manager.cpp  test_python_integration.cpp  test_rendering_refactor_services.cpp  test_rml_static_style_boundaries.cpp  test_scene_validity.cpp  test_selection_command_dispatch.cpp  test_selection_ipc_roundtrip.cpp  test_selection_operator_modal.cpp  test_selection_rasterization_ops.cpp  test_selection_service_interactions.cpp  test_sequencer_regressions.cpp  test_tensor_benchmark.cpp  test_tensor_lazy_ir.cpp  test_tensor_stream.cpp  test_tensor_uint8_masking.cpp  test_theme_registry.cpp  test_video_export_utils.cpp  test_view_info_json.cpp  test_viewport.cpp  test_viewport_region_utils.cpp  test_vksplat_input_packer.cpp
(+534 files in other folders)
